# live-translate

./: .env.local.example  .gitignore  IMPLEMENTATION_PLAN.md  PLAN_STREAMING_TTS.md  PROJECT_PLAN.md  README.md  agent.py  pyproject.toml  run.sh  server.py  stop.sh  task_for_human.md  translator.py
static/: index.html  manifest.json
